tests/invalid/invalid_int.err_exp2
invalid_int.m:019: Error: the integer literal
invalid_int.m:019:   [38;5;87m`0b10000000000000000000000000000000000000000000000000000000000000000'[39;49m
invalid_int.m:019:   is [38;5;203moutside the range of that type.[39;49m
invalid_int.m:024: Error: the integer literal [38;5;87m`0o2000000000000000000000'[39;49m is
invalid_int.m:024:   [38;5;203moutside the range of that type.[39;49m
invalid_int.m:030: Error: the integer literal [38;5;87m`0x10000000000000000'[39;49m is [38;5;203moutside[39;49m
invalid_int.m:030:   [38;5;203mthe range of that type.[39;49m
invalid_int.m:035: Error: the integer literal [38;5;87m`9223372036854775808'[39;49m is [38;5;203moutside[39;49m
invalid_int.m:035:   [38;5;203mthe range of that type.[39;49m
invalid_int.m:040: Error: the 8-bit integer literal [38;5;87m`-129i8'[39;49m is [38;5;203moutside the[39;49m
invalid_int.m:040:   [38;5;203mrange of that type.[39;49m
invalid_int.m:043: Error: the 8-bit integer literal [38;5;87m`128i8'[39;49m is [38;5;203moutside the[39;49m
invalid_int.m:043:   [38;5;203mrange of that type.[39;49m
invalid_int.m:048: Error: the unsigned 8-bit integer literal [38;5;87m`256u8'[39;49m is [38;5;203moutside[39;49m
invalid_int.m:048:   [38;5;203mthe range of that type.[39;49m
invalid_int.m:049: Error: the unsigned 8-bit integer literal [38;5;87m`257u8'[39;49m is [38;5;203moutside[39;49m
invalid_int.m:049:   [38;5;203mthe range of that type.[39;49m
invalid_int.m:054: Error: the 16-bit integer literal [38;5;87m`-32769i16'[39;49m is [38;5;203moutside the[39;49m
invalid_int.m:054:   [38;5;203mrange of that type.[39;49m
invalid_int.m:057: Error: the 16-bit integer literal [38;5;87m`32768i16'[39;49m is [38;5;203moutside the[39;49m
invalid_int.m:057:   [38;5;203mrange of that type.[39;49m
invalid_int.m:063: Error: the unsigned 16-bit integer literal [38;5;87m`65536u16'[39;49m is
invalid_int.m:063:   [38;5;203moutside the range of that type.[39;49m
invalid_int.m:068: Error: the 32-bit integer literal [38;5;87m`-2147483649i32'[39;49m is
invalid_int.m:068:   [38;5;203moutside the range of that type.[39;49m
invalid_int.m:071: Error: the 32-bit integer literal [38;5;87m`2147483648i32'[39;49m is [38;5;203moutside[39;49m
invalid_int.m:071:   [38;5;203mthe range of that type.[39;49m
invalid_int.m:077: Error: the unsigned 32-bit integer literal [38;5;87m`4294967296u32'[39;49m
invalid_int.m:077:   is [38;5;203moutside the range of that type.[39;49m
